# Rheel_Data_Management

./: README.md  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
src/rheelDM/: main.py
