[project]
name = "Rheel-Data-Management"
version = "1.2"
authors = [
  { name="CoCo_R", email="coco_snow@myyahoo.com" },
]
description = "Data management for python made easy"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-only"
license-files = ["LICENSE*"]

[project.urls]
Issues = "https://github.com/CoCo-R38/Rheel_Data_Management/issues"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rheelDM"]
